Resolve "Add eCMR data model v1.0.0 to the backend and adjust backend due to data model changes"